--- a/UI/user.html
+++ b/UI/user.html
@@ -11,7 +11,7 @@
 <body>
     <header>
       <div class="header">
-        <a href="" class="logo"><img class="image sm" src="image/new_logo.png" alt="Company Logo"></a>
+        <a href="index.html" class="logo"><img class="image sm" src="image/new_logo.png" alt="Company Logo"></a>
         <a href="" class="show-menu"><i class="fas fa-bars"></i></a>
         <a href="" class="hide-menu"><i class="fas fa-times"></i></a>
         <div class="header-right">
@@ -60,7 +60,6 @@
   <footer>
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
   </footer>
-  <script src="js/meetup.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
