--- a/UI/meetup-single.html
+++ b/UI/meetup-single.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,10 @@
   <title>Questioner | Meetup</title>
   <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
   <link rel="stylesheet" type="text/css" href="css/loader.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+    crossorigin="anonymous">
 </head>
+
 <body>
   <header>
     <div class="header">
@@ -24,7 +27,7 @@
   </header>
   <div id="overlay">
     <div id="loader"></div>
-</div>
+  </div>
   <div class="flex full no-pad">
     <div id="meetup"></div>
   </div>
@@ -35,8 +38,8 @@
   </div>
   <div class="container" id="add-question">
     <div class="alert">
-        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-        <span class="error"></span>
+      <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+      <span class="error"></span>
     </div>
     <br>
     <label for="title">Title</label>
@@ -54,4 +57,5 @@
   <script src="js/meetup-single.js"></script>
   <script src="js/index.js"></script>
 </body>
+
 </html>
