--- a/UI/admin.html
+++ b/UI/admin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta charset="utf-8" />
@@ -8,8 +9,11 @@
   <title>Questioner | Admin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" media="screen" href="css/loader.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+    crossorigin="anonymous">
 </head>
+
 <body>
   <header>
     <div class="header">
@@ -18,120 +22,40 @@
       <a href="" class="hide-menu"><i class="fas fa-times"></i></a>
       <div class="header-right">
         <a href=""></a>
-        <a id="linkMeetups" href="#">All meetups</a>
-        <a class="active" id="dashboard" href="#Dashboard">Dashboard</a>
+        <a class="active" id="dashboard" href="#">Dashboard</a>
       </div>
     </div>
   </header>
+  <div id="overlay">
+    <div id="loader"></div>
+  </div>
   <div class="flex">
-    <div><p class="lg font22"><i class="fas fa-user-plus"> All Meetups<br/>20</i></p></div>
-    <div><p class="lg font22"><i class="fas fa-comment"> All comments<br/>40</i></p></div>
-    <div><p class="lg font22"><i class="fas fa-users"> All Questions <br/>30</i></p></div>
+    <div>
+      <p class="lg font22"><i class="fas fa-user-plus"> All Meetups</i><br><span id="totalmeetups"></span></p>
+    </div>
   </div>
   <div class="container" id="create">
-      <div class="form-group">
-        <label for="topic">Topic</label>
-        <input type="text" id="topic" placeholder="Andela Bootcamp" required>
-      </div>
+    <div class="alert">
+      <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+      <span class="error"></span>
+    </div>
+    <br>
+    <div class="form-group">
+      <label for="topic">Topic</label>
+      <input type="text" id="topic" placeholder="Andela Bootcamp" required>
+    </div>
 
-      <div class="form-group">
-        <label for="topic">Location</label>
-        <input type="text" id="location" placeholder="Epic Tower" required>
-      </div>
+    <div class="form-group">
+      <label for="topic">Location</label>
+      <input type="text" id="location" placeholder="Epic Tower" required>
+    </div>
 
-      <div class="form-group">
-        <label for="topic">Hapening on</label>
-        <input type="date" id="date" placeholder="Epic Tower" required>
-      </div>
+    <div class="form-group">
+      <label for="topic">Hapening on</label>
+      <input type="date" id="date" placeholder="Epic Tower" required>
+    </div>
     <img class="image" id="image" src="">
-    <button id="btnmeetup" type="submit">Add meetup</button><br/>
-    <div class="error font12"></div>
-  </div>
-  <div class="flex meetup-card" id="meetups">
-    <a href="meetup-single.html">
-      <div>
-        <img class="image" src="image/andela.jpg">
-        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-        <h6 class="font12">@Epic Tower</h6>
-        <span class="text-holder">
-          <ul class="details font12">
-            <li>Feb 29 2017</li>
-            <li>30 Questions</li>
-            <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
-          </ul>
-        </span>
-      </div>
-    </a>
-    <a href="meetup-single.html">
-      <div>
-        <img class="image" src="image/andela.jpg">
-        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-        <h6 class="font12">@Epic Tower</h6>
-        <span class="text-holder">
-          <ul class="details font12">
-            <li>Feb 29 2017</li>
-            <li>30 Questions</li>
-            <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
-          </ul>
-        </span>
-      </div>
-    </a>
-    <a href="meetup-single.html">
-      <div>
-        <img class="image" src="image/andela.jpg">
-        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-        <h6 class="font12">@Epic Tower</h6>
-        <span class="text-holder">
-          <ul class="details font12">
-            <li>Feb 29 2017</li>
-            <li>30 Questions</li>
-            <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
-          </ul>
-        </span>
-      </div>
-    </a>
-    <a href="meetup-single.html">
-      <div>
-        <img class="image" src="image/andela.jpg">
-        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-        <h6 class="font12">@Epic Tower</h6>
-        <span class="text-holder">
-          <ul class="details font12">
-            <li>Feb 29 2017</li>
-            <li>30 Questions</li>
-            <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
-          </ul>
-        </span>
-      </div>
-    </a>
-    <a href="meetup-single.html">
-      <div>
-        <img class="image" src="image/andela.jpg">
-        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-        <h6 class="font12">@Epic Tower</h6>
-        <span class="text-holder">
-          <ul class="details font12">
-            <li>Feb 29 2017</li>
-            <li>30 Questions</li>
-            <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
-          </ul>
-        </span>
-      </div>
-    </a>
-    <a href="meetup-single.html">
-      <div>
-        <img class="image" src="image/andela.jpg">
-        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-        <h6 class="font12">@Epic Tower</h6>
-        <span class="text-holder">
-          <ul class="details font12">
-            <li>Feb 29 2017</li>
-            <li>30 Questions</li>
-            <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
-          </ul>
-        </span>
-      </div>
-    </a>
+    <button id="btnmeetup" type="submit">Add meetup</button><br />
   </div>
   <footer>
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
@@ -139,4 +63,5 @@
   <script src="js/admin.js"></script>
   <script src="js/index.js"></script>
 </body>
+
 </html>
