--- a/UI/meetups.html
+++ b/UI/meetups.html
@@ -33,7 +33,7 @@
   <div id="test" class="flex meetup-card"></div>
   <footer>
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
-  </footer>
+  </footer>>
   <script src="js/index.js"></script>
   <script src="js/meetups.js"></script>
 </body>
