--- a/UI/admin.html
+++ b/UI/admin.html
@@ -33,6 +33,8 @@
     <div>
       <p class="lg font22"><i class="fas fa-user-plus"> All Meetups</i><br><span id="totalmeetups"></span></p>
     </div>
+    <div><p class="lg font22"><i class="fas fa-comment"> All comments<br/>40</i></p></div>
+    <div><p class="lg font22"><i class="fas fa-users"> All Questions <br/>30</i></p></div>
   </div>
   <div class="container" id="create">
     <div class="alert">
