--- a/UI/index.html
+++ b/UI/index.html
@@ -19,7 +19,8 @@
         <a href="index.html#contact">Contact</a>
         <a href="index.html#about">About</a>
         <a href="meetups.html">Meetups</a>
-        <a class="active" href="login.html">Sign in</a>
+        <a id="dashboard" href="user.html">Dashboard</a>
+        <a class="active" id="login" href="login.html">Sign in</a>
       </div>
     </div>
   </header>
@@ -33,7 +34,7 @@
   </div>
     <div class="flex full">
       <div class="no-border">
-        <h1>Need to use Questioner and have to idea of where to start?</h1>
+        <h1>Need to use Questioner and have no idea of where to start?</h1>
         <p class="font16 center">At Questioner, we know the importance of Meetups and Questions. That's is why we are here to help you       prioritize questions for your meetup.
             With Questioner, you don't need to worry about the trending question/questions for your meetup we already got that covered for you.
          </p>
@@ -61,5 +62,7 @@
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
   </footer>
   <script src="js/index.js"></script>
+  <script src="js/menu.js"></script>
+  <script src="js/sign-out.js"></script>
 </body>
 </html>
