--- a/UI/login.html
+++ b/UI/login.html
@@ -20,7 +20,7 @@
                     <a href="index.html#contact">Contact</a>
                     <a href="index.html#about">About</a>
                     <a href="meetups.html">Meetups</a>
-                    <a class="active" href="">login</a>
+                    <a class="active" href="">Sign in</a>
                 </div>
             </div>
         </header>
