--- a/UI/meetup-single.html
+++ b/UI/meetup-single.html
@@ -20,10 +20,12 @@
       <a href="" class="hide-menu"><i class="fas fa-times"></i></a>
       <div class="header-right">
         <a href=""></a>
-        <a class="active" href="meetups.html">Meetups</a>
-        <a href="user.html">Dashboard</a>
+        <a href="index.html#contact">Contact</a>
+        <a href="index.html#about">About</a>
+        <a href="meetups.html">Meetups</a>
+        <a id="dashboard" href="user.html">Dashboard</a>
+        <a class="active" id="login" href="login.html">Sign in</a>
       </div>
-    </div>
   </header>
   <div id="overlay">
     <div id="loader"></div>
@@ -54,8 +56,11 @@
   <footer>
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
   </footer>
+  <script src="js/secure.js"></script>
+  <script src="js/menu.js"></script>
   <script src="js/meetup-single.js"></script>
   <script src="js/index.js"></script>
+  <script src="js/sign-out.js"></script>
 </body>
 
 </html>
