--- a/UI/meetups.html
+++ b/UI/meetups.html
@@ -23,7 +23,8 @@
         <a href="index.html#contact">Contact</a>
         <a href="index.html#about">About</a>
         <a href="meetups.html">Meetups</a>
-        <a class="active" href="login.html">Sign in</a>
+        <a id="dashboard" href="user.html">Dashboard</a>
+        <a class="active" id="login" href="login.html">Sign in</a>
       </div>
     </div>
   </header>
@@ -35,7 +36,9 @@
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
   </footer>>
   <script src="js/index.js"></script>
+  <script src="js/menu.js"></script>
   <script src="js/meetups.js"></script>
+  <script src="js/sign-out.js"></script>
 </body>
 
 </html>
