--- a/UI/user.html
+++ b/UI/user.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Questioner | User-Dashboard</title>
   <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css/loader.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
@@ -17,49 +18,29 @@
         <div class="header-right">
           <a href=""></a>
           <a href="meetups.html">meetups</a>
-          <a class="active" id="dashboard" href="">Dashboard</a>
+          <a class="active" id="login" href="">Sign out</a>
         </div>
       </div>
     </header>
+    <div id="overlay">
+      <div id="loader"></div>
+    </div>
   <div class="flex">
-    <div><p class="lg font22"><i class="fas fa-user-plus"> 7 Posts</i></p></div>
-    <div><p class="lg font22"><i class="fas fa-comment"> 7 comments</i></p></div>
-    <div><p class="lg font22"><i class="fas fa-users"> 7 upcoming meetups</i></p></div>
+    <div><p class="lg font22"><i class="fas fa-user-plus"><span id="totalpost"></span> Posts</i></p></div>
+    <div><p class="lg font22"><i class="fas fa-comment"><span id="totalcomments"></span> Comments</i></p></div>
+    <div><p class="lg font22"><i class="fas fa-users"><span id="totalupcoming"></span> Upcoming meetups</i></p></div>
   </div>
-  <div class="flex full flex-buttom-space">
+  <div id="upcomigmeetupcontainer" class="flex full flex-buttom-space">
     <div class="center no-border">
-      <h1 id="title">Top upcoming meetup(s) Questions</h1>
-    </div>
-    <div class="space">
-      <h4><a href="">What do i need to do to succeed in the bootcamp</a></h4>
-      <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
-      <p class="font16">by Akinremi Olumide</p>
-      <span class="text-holder">
-        <ul class="details">
-          <li>Feb 29 2017</li>
-          <li><a class="upvote" href="#"><i class="fas fa-thumbs-up"></i><span class="num">100</span></a></li>
-          <li><a class="downvote" href="#"><i class="fas fa-thumbs-down"></i><span class="num">5</span></a></li>
-        </ul>
-        <a href="comment.html"><button type="button" class="font12 sm">Comments</button></a>
-      </span>
-    </div>
-    <div class="space">
-      <h4><a href="">Please i need to know more about the bootcamp</a></h4>
-      <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
-      <p class="font16">by Akinremi Olumide</p>
-      <span class="text-holder">
-        <ul class="details">
-          <li>Feb 29 2017</li>
-          <li><a class="upvote" href=""><i class="fas fa-thumbs-up"></i><span class="num">100</span></a></li>
-          <li><a class="downvote" href=""><i class="fas fa-thumbs-down"></i><span class="num">5</span></a></li>
-        </ul>
-        <a href="comment.html"><button type="button" class="font12 sm">Comments</button></a>
-      </span>
+      <h1 id="title">Top upcoming meetup(s)</h1>
     </div>
   </div>
   <footer>
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
   </footer>
+  <script src="js/secure.js"></script>
   <script src="js/index.js"></script>
+  <script src="js/user.js"></script>
+  <script src="js/sign-out.js"></script>
 </body>
 </html>
