--- a/admin.html
+++ b/admin.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8" />
   <meta charset="utf-8" />
@@ -10,11 +9,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="css/loader.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css/modal.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
     crossorigin="anonymous">
 </head>
-
 <body>
+  <div class="modal">
+    <div class="modal-content">
+      <span class="close-button">&times;</span>
+      <p class="msg"></p>
+    </div>
+  </div>
   <header>
     <div class="header">
       <a href="index.html" class="logo"><img class="image sm" src="image/new_logo.png" alt="Company Logo"></a>
@@ -41,10 +46,6 @@
     </div>
   </div>
   <div class="container" id="create">
-    <div class="alert">
-      <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-      <span class="error"></span>
-    </div>
     <br>
     <div class="form-group">
       <label for="topic">Topic</label>
